--- a/AutoBC/popup/popup.html
+++ b/AutoBC/popup/popup.html
@@ -6,6 +6,7 @@
   <body>
     <center>
       <p id="title"><b>Auto Bonus Chest</b></p>
+      <a href="https://twitter.com/Styfish_Noob" id="Twitter"><img src="/img/Twitter.png" alt="製作者Twitter" id="TwitterIcon"></a>
   </center>
     <div class="time1">
       <center>
@@ -18,8 +19,7 @@
     </div>
     </center>
     </div>
-    <a href="#" id="twitterURL">製作者Twitter</a>
   </body>
   <script src="popup/popup.js"></script>
-  <link rel="stylesheet" href="popup/css.css">
+  <link rel="stylesheet" href="css.css">
 </html>
