--- a/AutoBC/popup/popup.html
+++ b/AutoBC/popup/popup.html
@@ -7,19 +7,27 @@
     <center>
       <p id="title"><b>Auto Bonus Chest</b></p>
       <a href="https://twitter.com/Styfish_Noob" id="Twitter"><img src="/img/Twitter.png" alt="製作者Twitter" id="TwitterIcon"></a>
-  </center>
-    <div class="time1">
+    </center>
+    <div class="description">
       <center>
-      箱出現まで残り約
-      <b><span id="m">0</span>分<span id="s">0</span>秒</b>
+      <span id="des1">Time remaining:</span>
+      <b><span id="m">0</span><span id="min">m</span><span id="s">0</span><span id="sec">s</span></b>
     </center>
     <center>
-    ※一度箱が出現してから計測が始まります
+      <span id="des2">
+        *The measurement will start after the first box appears.
+      </span>
   </center>
     </div>
     </center>
     </div>
+    <div class="lang_class">
+      <select id="lang_menu">
+        <option value="en">English</option>
+        <option value="ja">日本語</option>
+      </select>
+    </div>
   </body>
-  <script src="popup/popup.js"></script>
+  <script src="popup.js"></script>
   <link rel="stylesheet" href="css.css">
 </html>
